--- a/www/index.html
+++ b/www/index.html
@@ -30,7 +30,7 @@
             <h1>PhoneGap</h1>
             <div id="deviceready" class="blink">
                 <p class="event listening">Connecting to Device</p>
-                <p class="event received">Device is Ready<a href="www.google.it">Vai a Google</a></p>
+                <p class="event received">Device is Ready<a href="http://www.google.it">Vai a Google</a></p>
             </div>
         </div>
         <script type="text/javascript" src="phonegap.js"></script>
